// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ResponsiveImage should allow width and height attributes on default src 1`] = `
<DocumentFragment>
  <figure
    class="coop-c-image"
  >
    <picture
      class="coop-c-image__media"
    >
      <img
        alt="alt"
        height="120"
        src="src"
        width="120"
      />
    </picture>
  </figure>
</DocumentFragment>
`;

exports[`ResponsiveImage should render correctly 1`] = `
<DocumentFragment>
  <figure
    class="coop-c-image"
  >
    <picture
      class="coop-c-image__media"
    >
      <img
        alt="alt"
        src="src"
      />
    </picture>
  </figure>
</DocumentFragment>
`;

exports[`ResponsiveImage should render sources 1`] = `
<DocumentFragment>
  <figure
    class="coop-c-image"
  >
    <picture
      class="coop-c-image__media"
    >
      <source
        media="(min-width: 1200)"
        srcset="//images.ctfassets.net/bffxiku554r1/7XDwxNP8ioupeMdJZxNS8/d23d2b802d6be0ecbcb7abd1ff33b159/coop-supporting-local-communities.png?fm=webp&amp;q=60&amp;w=600&amp;h=338 1x, //images.ctfassets.net/bffxiku554r1/7XDwxNP8ioupeMdJZxNS8/d23d2b802d6be0ecbcb7abd1ff33b159/coop-supporting-local-communities.png?fm=webp&amp;q=60&amp;w=600&amp;h=338 2x"
        type="image/webp"
      />
      <source
        media="(min-width: 600)"
        srcset="//images.ctfassets.net/bffxiku554r1/7XDwxNP8ioupeMdJZxNS8/d23d2b802d6be0ecbcb7abd1ff33b159/coop-supporting-local-communities.png?fm=webp&amp;q=60&amp;w=600&amp;h=338 1x, //images.ctfassets.net/bffxiku554r1/7XDwxNP8ioupeMdJZxNS8/d23d2b802d6be0ecbcb7abd1ff33b159/coop-supporting-local-communities.png?fm=webp&amp;q=60&amp;w=600&amp;h=338 2x"
        type="image/webp"
      />
      <img
        alt="alt"
        src="src"
      />
    </picture>
  </figure>
</DocumentFragment>
`;
